add THSR interface

--- a/Ticket_bot_website/website/templates/NDHUTicket.html
+++ b/Ticket_bot_website/website/templates/NDHUTicket.html
@@ -56,6 +56,10 @@
                     <div class="card-body">
                         <h3 class="card-title text-center">租借偏好</h3>
                         <div class="form-group">
+                            <label for="date">選擇日期</label>
+                            <input type="date" class="form-control" id="date" name="date">
+                        </div>
+                        <div class="form-group">
                             <label for="timeSelection">時間選擇</label>
                             <select class="form-control" id="timeSelection" name="timeSelection" onchange="toggleCustomTime(this)">
                                 <option value="firstTime">使用第一個時間</option>
